Closed Bug 1370198 Opened 8 years ago Closed 8 years ago

Crash in CThreadInputMgr::~CThreadInputMgr

Categories

(Core :: Widget: Win32, defect)

55 Branch
Unspecified
Windows 10
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox-esr52 --- unaffected
firefox53 --- unaffected
firefox54 --- unaffected
firefox55 --- fixed

People

(Reporter: calixte, Assigned: masayuki)

References

(Blocks 1 open bug)

Details

(Keywords: crash, regression, Whiteboard: [clouseau])

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-94b10d47-f374-4dfc-b88b-ba0390170604. ============================================================= There are 12 crashes in nightly 55 with buildid 20170604030205. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1369419. [1] https://hg.mozilla.org/mozilla-central/rev?node=b404c31db6de9f6724ddd5a86e30acc07ba367f0
Flags: needinfo?(masayuki)
Oh, this hits new bug of TSF module itself, but the patch for bug 1369419 failed to fix bug 1361132. So, it's fine to back it out.
Assignee: nobody → masayuki
Status: NEW → ASSIGNED
Flags: needinfo?(masayuki)
Comment on attachment 8874419 [details] Bug 1370198 Back out the patch for bug 1369419 because the patch couldn't fix bug 1361132 and causes new crash bugs https://reviewboard.mozilla.org/r/145792/#review149814
Attachment #8874419 - Flags: review?(jmathies) → review+
Pushed by masayuki@d-toybox.com: https://hg.mozilla.org/integration/autoland/rev/21e1a47c4852 Back out the patch for bug 1369419 because the patch couldn't fix bug 1361132 and causes new crash bugs r=jimm
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: