Bug 1370198 Back out the patch for bug 1369419 because the patch couldn't fix bug 1361132 and causes new crash bugs r=jimm

MozReview-Commit-ID: Eq7Dkk6Ghwc